fix top gap on mobile

--- a/src/styles/Chat.css
+++ b/src/styles/Chat.css
@@ -7,7 +7,8 @@
 }
 
 .Chat .chat-box {
-  height: calc(100% - 52px);
+  overflow: auto;
+  flex: 1;
 }
 
 .Chat .chat-box > div {
